@@ -245,7 +245,7 @@ public class DutySchedule implements Cloneable {
         Vector<Object> vector = new Vector<Object>();
 
         for (int i = 0; i < 7; i++) {
-            vector.add(new Boolean(m_days.get(i)));
+            vector.add(Boolean.valueOf(m_days.get(i)));
         }
 
         vector.add(String.valueOf(m_startTime));
